# eth-signer

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  deny.toml
.cursor/rules/: rust.mdc
.github/: dependabot.yml
.github/workflows/: docker-build.yaml  rust-test.yml
crates/eth-signer/: Cargo.toml
crates/eth-signer/src/: config.rs  error.rs  main.rs  otel.rs  route.rs
crates/eth-signer/src/signer/: config.rs  mod.rs
src/: error.rs  route.rs
src/signer/: mod.rs
